# openclaw-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  README.md  STRUCTURE.md  example.py  project.toml  pyproject.toml  pytest.ini  requirements-dev.txt  setup.bat  setup.sh
.github/workflows/: tests.yml
src/openclaw_python_skill/: __init__.py  models.py  pipeline.py  registry.py  skill.py
src/openclaw_python_skill/skills/: __init__.py  math_skill.py  text_analyzer.py  web_fetch.py  web_scraper.py
tests/: conftest.py  test_base_skill.py  test_math_skill.py  test_pipeline.py  test_registry.py  test_skills.py  test_web_fetch.py  test_web_scraper.py
